--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -28,35 +28,8 @@ body:
   - type: 'textarea'
     id: 'observed_behavior'
     attributes:
-      label: 'Observed behavior'
+      label: 'Observed behaviour'
       description: 'What happened instead?'
-
-  - type: 'textarea'
-    id: 'tf_config'
-    attributes:
-      label: 'Terraform Configuration'
-      description: 'Paste your reproducible Terraform configuration including all module and version constraints, removing any sensitive values.'
-      render: 'hcl'
-    validations:
-      required: true
-
-  - type: 'textarea'
-    id: 'tf_version'
-    attributes:
-      label: 'Terraform Version'
-      description: 'Paste the output of `terraform version`, removing any sensitive values.'
-      render: 'sh'
-    validations:
-      required: true
-
-  - type: 'textarea'
-    id: 'tf_providers'
-    attributes:
-      label: 'Terraform Provider Versions'
-      description: 'Paste the output of `terraform providers`, removing any sensitive values.'
-      render: 'sh'
-    validations:
-      required: true
 
   - type: 'textarea'
     id: 'additional'
@@ -64,18 +37,18 @@ body:
       label: 'Additional information'
       description: 'Is there anything else you think we should know?'
 
-  - type: textarea
-    id: logs
+  - type: 'textarea'
+    id: 'logs'
     attributes:
-      label: Relevant log output
-      description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
+      label: 'Relevant log output'
+      description: 'Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.'
       render: shell
 
-  - type: checkboxes
-    id: terms
+  - type: 'checkboxes'
+    id: 'terms'
     attributes:
-      label: Code of Conduct
-      description: By submitting this issue, you agree to follow our [Code of Conduct](https://docs.open-metadata.org/developers/contribute). 
+      label: 'Code of Conduct'
+      description: 'By submitting this issue, you agree to follow our Code of Conduct.'
       options:
-        - label: I agree to follow this project's Code of Conduct
+        - label: 'I agree to follow this project`s Code of Conduct'
           required: true
