--- a/.github/workflows/aws-costs.yml
+++ b/.github/workflows/aws-costs.yml
@@ -3,8 +3,8 @@ on:
   # Allow manual Run
   workflow_dispatch:
   # Run at 7:00 UTC every day
-  schedule:
-    - cron: "0 7 * * *"
+  # schedule:
+  #   - cron: "0 7 * * *"
 jobs:
   aws_costs:
     runs-on: ubuntu-latest
