--- a/package.json
+++ b/package.json
@@ -49,8 +49,10 @@
   },
   "homepage": "https://github.com/codecollab-co/infra-cost.git#readme",
   "dependencies": {
-    "@aws-sdk/shared-ini-file-loader": "^3.254.0",
-    "aws-sdk": "^2.1299.0",
+    "@aws-sdk/client-cost-explorer": "^3.370.0",
+    "@aws-sdk/client-iam": "^3.370.0",
+    "@aws-sdk/client-sts": "^3.370.0",
+    "@aws-sdk/shared-ini-file-loader": "^3.370.0",
     "chalk": "^5.2.0",
     "commander": "^10.0.0",
     "dayjs": "^1.11.7",
