Add automated Homebrew publishing pipeline
- Create GitHub Actions workflow for automated releases
- Add Homebrew formula template and tap repository setup
- Include comprehensive release preparation script with version management
- Support for both stable releases and pre-releases
- Automated npm publishing integration
- Complete Homebrew tap creation and maintenance workflows

Features:
- Release workflow triggered by version tags (v*)
- Automatic formula updates in homebrew tap repository
- Release notes generation from commit history
- npm publishing with proper pre-release tag handling
- Homebrew tap setup with automated repository creation

This enables users to install via: brew install codecollab-co/tap/infra-cost

Fixes #18

--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "predev": "run-s clean",
     "clean": "rm -rf dist",
     "typecheck": "tsc --noEmit",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare-release": "./scripts/prepare-release.sh",
+    "prepublishOnly": "npm run build",
+    "postversion": "echo \"Don't forget to push the tag: git push origin v$npm_package_version\""
   },
   "keywords": [
     "aws",
