Add comprehensive npm publishing pipeline
- Create automated npm publishing workflow with tag-based and manual triggers
- Add comprehensive CI pipeline with multi-Node.js version testing
- Implement advanced version management script with semver validation
- Include security auditing, package validation, and CLI functionality tests
- Support for prerelease versions with automatic tagging (latest/beta)
- Add dry-run capabilities for safe testing
- Comprehensive publishing documentation with examples

Features:
- Automated publishing on git tag push (v*)
- Manual workflow dispatch with version type selection
- Multi-Node.js version compatibility testing (16, 18, 20)
- Package security audit and dependency checks
- CLI functionality validation
- Duplicate version detection and prevention
- GitHub release creation with automated changelogs
- npm scripts for local version management and publishing

Scripts:
- npm run version:check - Check current version status
- npm run version:bump:patch/minor/major/prerelease - Bump versions
- npm run version:next <type> - Preview next version
- npm run publish:dry - Test publish without releasing
- npm run publish:beta/latest - Publish to specific npm tags

This provides a complete automated publishing solution with quality gates,
version management, and comprehensive testing for reliable npm releases.

Fixes #19

--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,8 @@
 enable-pre-post-scripts=true
+save-exact=false
+engine-strict=true
+audit-level=moderate
+access=public
+registry=https://registry.npmjs.org/
+package-lock=true
+fund=false
