--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bin/**/*"
   ],
   "bin": {
+    "infra-cost": "./bin/index.js",
     "aws-cost": "./bin/index.js"
   },
   "scripts": {
@@ -24,17 +25,24 @@
     "predev": "run-s clean",
     "clean": "rm -rf dist",
     "typecheck": "tsc --noEmit",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "version:check": "node scripts/version-manager.js check",
+    "version:next": "node scripts/version-manager.js next",
+    "publish:dry": "npm publish --dry-run"
   },
   "keywords": [
     "aws",
+    "gcp",
+    "azure",
+    "alibaba-cloud",
+    "oracle-cloud",
+    "multi-cloud",
     "cost",
     "cli",
-    "aws-cost",
-    "aws-cost-cli",
-    "aws-costs",
-    "typescript",
-    "aws cli"
+    "infra-cost",
+    "cloud-cost",
+    "cost-analysis",
+    "typescript"
   ],
   "license": "MIT",
   "repository": {
@@ -49,8 +57,18 @@
   },
   "homepage": "https://github.com/codecollab-co/infra-cost.git#readme",
   "dependencies": {
+    "@aws-sdk/client-ce": "^3.254.0",
+    "@aws-sdk/client-iam": "^3.254.0",
+    "@aws-sdk/client-sts": "^3.254.0",
+    "@aws-sdk/credential-providers": "^3.254.0",
     "@aws-sdk/shared-ini-file-loader": "^3.254.0",
-    "aws-sdk": "^2.1299.0",
+    "@google-cloud/billing": "^4.1.0",
+    "@google-cloud/resource-manager": "^5.1.0",
+    "@azure/arm-costmanagement": "^1.0.0",
+    "@azure/arm-subscriptions": "^5.1.0",
+    "@azure/identity": "^3.1.0",
+    "@alicloud/pop-core": "^1.7.12",
+    "oci-sdk": "^2.69.0",
     "chalk": "^5.2.0",
     "commander": "^10.0.0",
     "dayjs": "^1.11.7",
@@ -64,5 +82,37 @@
     "ts-node": "^10.9.1",
     "tsup": "^6.5.0",
     "typescript": "^4.9.4"
+  },
+  "peerDependencies": {
+    "@google-cloud/billing": "^4.1.0",
+    "@google-cloud/resource-manager": "^5.1.0",
+    "@azure/arm-costmanagement": "^1.0.0",
+    "@azure/arm-subscriptions": "^5.1.0",
+    "@azure/identity": "^3.1.0",
+    "@alicloud/pop-core": "^1.7.12",
+    "oci-sdk": "^2.69.0"
+  },
+  "peerDependenciesMeta": {
+    "@google-cloud/billing": {
+      "optional": true
+    },
+    "@google-cloud/resource-manager": {
+      "optional": true
+    },
+    "@azure/arm-costmanagement": {
+      "optional": true
+    },
+    "@azure/arm-subscriptions": {
+      "optional": true
+    },
+    "@azure/identity": {
+      "optional": true
+    },
+    "@alicloud/pop-core": {
+      "optional": true
+    },
+    "oci-sdk": {
+      "optional": true
+    }
   }
 }
