--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bin/**/*"
   ],
   "bin": {
+    "infra-cost": "./bin/index.js",
     "aws-cost": "./bin/index.js"
   },
   "scripts": {
@@ -26,6 +27,12 @@
     "typecheck": "tsc --noEmit",
     "test": "echo \"Error: no test specified\" && exit 1",
     "version:check": "node scripts/version-manager.js check",
+
+    "version:next": "node scripts/version-manager.js next",
+    "publish:dry": "npm publish --dry-run",
+    "prepare-release": "./scripts/prepare-release.sh",
+    "prepublishOnly": "npm run build",
+    "postversion": "echo \"Don't forget to push the tag: git push origin v$npm_package_version\""
     "version:bump:patch": "node scripts/version-manager.js bump patch",
     "version:bump:minor": "node scripts/version-manager.js bump minor",
     "version:bump:major": "node scripts/version-manager.js bump major",
@@ -37,16 +44,21 @@
     "publish:latest": "npm publish --tag latest",
     "prepublishOnly": "npm run build && npm run typecheck",
     "postpublish": "echo \"🎉 Published $(npm pkg get name)@$(npm pkg get version) to npm!\""
+
   },
   "keywords": [
     "aws",
+    "gcp",
+    "azure",
+    "alibaba-cloud",
+    "oracle-cloud",
+    "multi-cloud",
     "cost",
     "cli",
-    "aws-cost",
-    "aws-cost-cli",
-    "aws-costs",
-    "typescript",
-    "aws cli"
+    "infra-cost",
+    "cloud-cost",
+    "cost-analysis",
+    "typescript"
   ],
   "license": "MIT",
   "repository": {
@@ -61,6 +73,18 @@
   },
   "homepage": "https://github.com/codecollab-co/infra-cost.git#readme",
   "dependencies": {
+    "@aws-sdk/client-ce": "^3.254.0",
+    "@aws-sdk/client-iam": "^3.254.0",
+    "@aws-sdk/client-sts": "^3.254.0",
+    "@aws-sdk/credential-providers": "^3.254.0",
+    "@aws-sdk/shared-ini-file-loader": "^3.254.0",
+    "@google-cloud/billing": "^4.1.0",
+    "@google-cloud/resource-manager": "^5.1.0",
+    "@azure/arm-costmanagement": "^1.0.0",
+    "@azure/arm-subscriptions": "^5.1.0",
+    "@azure/identity": "^3.1.0",
+    "@alicloud/pop-core": "^1.7.12",
+    "oci-sdk": "^2.69.0",
     "@aws-sdk/client-cost-explorer": "^3.370.0",
     "@aws-sdk/client-iam": "^3.370.0",
     "@aws-sdk/client-sts": "^3.370.0",
@@ -78,5 +102,37 @@
     "ts-node": "^10.9.1",
     "tsup": "^6.5.0",
     "typescript": "^4.9.4"
+  },
+  "peerDependencies": {
+    "@google-cloud/billing": "^4.1.0",
+    "@google-cloud/resource-manager": "^5.1.0",
+    "@azure/arm-costmanagement": "^1.0.0",
+    "@azure/arm-subscriptions": "^5.1.0",
+    "@azure/identity": "^3.1.0",
+    "@alicloud/pop-core": "^1.7.12",
+    "oci-sdk": "^2.69.0"
+  },
+  "peerDependenciesMeta": {
+    "@google-cloud/billing": {
+      "optional": true
+    },
+    "@google-cloud/resource-manager": {
+      "optional": true
+    },
+    "@azure/arm-costmanagement": {
+      "optional": true
+    },
+    "@azure/arm-subscriptions": {
+      "optional": true
+    },
+    "@azure/identity": {
+      "optional": true
+    },
+    "@alicloud/pop-core": {
+      "optional": true
+    },
+    "oci-sdk": {
+      "optional": true
+    }
   }
 }
