--- a/package.json
+++ b/package.json
@@ -68,32 +68,52 @@
   },
   "homepage": "https://github.com/codecollab-co/infra-cost.git#readme",
   "dependencies": {
+    "@aws-sdk/client-budgets": "^3.908.0",
     "@aws-sdk/client-cost-explorer": "^3.370.0",
+    "@aws-sdk/client-ec2": "^3.909.0",
     "@aws-sdk/client-iam": "^3.370.0",
+    "@aws-sdk/client-lambda": "^3.908.0",
+    "@aws-sdk/client-rds": "^3.908.0",
+    "@aws-sdk/client-s3": "^3.908.0",
     "@aws-sdk/client-sts": "^3.370.0",
     "@aws-sdk/credential-providers": "^3.370.0",
     "@aws-sdk/shared-ini-file-loader": "^3.370.0",
+    "axios": "^1.12.2",
     "chalk": "^5.2.0",
+    "cli-progress": "^3.12.0",
+    "cli-table3": "^0.6.5",
     "commander": "^10.0.0",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
+    "exceljs": "^4.4.0",
+    "express": "^5.1.0",
+    "moment": "^2.30.1",
     "node-fetch": "^3.3.0",
-    "ora": "^6.1.2"
+    "ora": "^6.1.2",
+    "puppeteer": "^24.24.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/cli-progress": "^3.11.6",
+    "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
     "@types/node": "^18.11.18",
+    "@types/supertest": "^6.0.3",
+    "jest": "^30.2.0",
     "npm-run-all": "^4.1.5",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.5",
     "ts-node": "^10.9.1",
     "tsup": "^6.5.0",
     "typescript": "^4.9.4"
   },
   "peerDependencies": {
-    "@google-cloud/billing": "^4.1.0",
-    "@google-cloud/resource-manager": "^5.1.0",
+    "@alicloud/pop-core": "^1.7.12",
     "@azure/arm-costmanagement": "^1.0.0",
     "@azure/arm-subscriptions": "^5.1.0",
     "@azure/identity": "^3.1.0",
-    "@alicloud/pop-core": "^1.7.12",
+    "@google-cloud/billing": "^4.1.0",
+    "@google-cloud/resource-manager": "^5.1.0",
     "oci-sdk": "^2.69.0"
   },
   "peerDependenciesMeta": {
