feat: Sprint 1 - Configuration, Delta Analysis, and SSO Support
This PR implements three foundational features for infra-cost:

## Features Implemented

### 1. Configuration File Support (#29)
- New `AppConfigManager` class for persistent settings
- Support for named profiles (production, staging, dev, etc.)
- Configuration file locations: project-local and user-global
- CLI options: `--config-file`, `--config-profile`, `--app-config-init`
- Environment variable support with `${VAR}` syntax
- Automatic config file discovery

### 2. Cost Delta Analysis (#7)
- New `analyzeCostDelta()` function for cost comparison
- Shows yesterday's cost change in percentage and absolute values
- Per-service delta breakdown with trend indicators
- Top increases/decreases identification
- Anomaly detection when changes exceed 25%
- CLI option: `--delta`, `--delta-threshold`

### 3. SSO Login Support (#9)
- Automatic SSO profile detection from AWS config
- `createAutoCredentialProvider()` for SSO authentication
- SSO token validation and cache checking
- Helpful login instructions when token expires
- CLI options: `--sso`, `--sso-list`, `--sso-info`, `--sso-validate`

## Files Added
- `src/config/app-config.ts` - Configuration management
- `src/analytics/cost-delta.ts` - Cost delta analysis
- `src/auth/sso-provider.ts` - SSO authentication

## Files Modified
- `src/index.ts` - CLI integration for all new features
- `src/printers/text.ts` - Delta display in text output
- `tsup.config.ts` - External dependencies configuration
- `package.json` - Added ini dependency

Closes #29, #7, #9

--- a/package.json
+++ b/package.json
@@ -77,15 +77,16 @@
     "@aws-sdk/client-sts": "^3.621.0",
     "@aws-sdk/credential-providers": "^3.621.0",
     "@slack/web-api": "^7.5.0",
+    "callsites": "^3.1.0",
     "chalk": "^4.1.2",
     "cli-table3": "^0.6.5",
     "commander": "^12.1.0",
-    "yauzl": "^3.0.0",
-    "pend": "^1.2.0",
     "fd-slicer": "^1.1.0",
+    "ini": "^6.0.0",
     "pako": "^2.1.0",
-    "zod": "^3.23.8",
-    "callsites": "^3.1.0"
+    "pend": "^1.2.0",
+    "yauzl": "^3.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
