fix: Address CodeRabbit review feedback
- Remove unused 'callsites' dependency from package.json
- Fix formatDelta/formatDeltaWithColor to use Math.abs() for proper negative value display
- Fix topDecreases formatting to show absolute values correctly
- Add $VAR pattern support (in addition to ${VAR}) in resolveEnvVar
- Fix config override logic using program.getOptionValueSource() to respect CLI args
- Fix date range calculations to use UTC for timezone consistency
- Remove unused CostBreakdown import from cost-delta.ts
- Fix readdirSync import consistency in sso-provider.ts (use ES import instead of require)
- Update tsup.config.ts with complete external dependencies list

--- a/package.json
+++ b/package.json
@@ -72,17 +72,29 @@
     "npm": ">=7.0.0"
   },
   "dependencies": {
+    "@aws-sdk/client-budgets": "^3.975.0",
     "@aws-sdk/client-cost-explorer": "^3.621.0",
+    "@aws-sdk/client-ec2": "^3.975.0",
+    "@aws-sdk/client-elastic-load-balancing-v2": "^3.975.0",
     "@aws-sdk/client-iam": "^3.621.0",
+    "@aws-sdk/client-lambda": "^3.975.0",
+    "@aws-sdk/client-rds": "^3.975.0",
+    "@aws-sdk/client-s3": "^3.975.0",
     "@aws-sdk/client-sts": "^3.621.0",
     "@aws-sdk/credential-providers": "^3.621.0",
     "@slack/web-api": "^7.5.0",
-    "callsites": "^3.1.0",
     "chalk": "^4.1.2",
+    "cli-progress": "^3.12.0",
     "cli-table3": "^0.6.5",
     "commander": "^12.1.0",
+    "dayjs": "^1.11.19",
+    "exceljs": "^4.4.0",
+    "express": "^5.2.1",
     "fd-slicer": "^1.1.0",
     "ini": "^6.0.0",
+    "moment": "^2.30.1",
+    "node-fetch": "^2.7.0",
+    "ora": "^9.1.0",
     "pako": "^2.1.0",
     "pend": "^1.2.0",
     "yauzl": "^3.0.0",
