--- a/package.json
+++ b/package.json
@@ -72,16 +72,16 @@
     "npm": ">=7.0.0"
   },
   "dependencies": {
-    "@aws-sdk/client-budgets": "^3.621.0",
-    "@aws-sdk/client-cost-explorer": "^3.621.0",
-    "@aws-sdk/client-ec2": "^3.621.0",
-    "@aws-sdk/client-elastic-load-balancing-v2": "^3.621.0",
-    "@aws-sdk/client-iam": "^3.621.0",
-    "@aws-sdk/client-lambda": "^3.621.0",
-    "@aws-sdk/client-rds": "^3.621.0",
-    "@aws-sdk/client-s3": "^3.621.0",
-    "@aws-sdk/client-sts": "^3.621.0",
-    "@aws-sdk/credential-providers": "^3.621.0",
+    "@aws-sdk/client-budgets": "3.620.0",
+    "@aws-sdk/client-cost-explorer": "3.620.0",
+    "@aws-sdk/client-ec2": "3.620.0",
+    "@aws-sdk/client-elastic-load-balancing-v2": "3.620.0",
+    "@aws-sdk/client-iam": "3.620.0",
+    "@aws-sdk/client-lambda": "3.620.0",
+    "@aws-sdk/client-rds": "3.620.0",
+    "@aws-sdk/client-s3": "3.620.0",
+    "@aws-sdk/client-sts": "3.620.0",
+    "@aws-sdk/credential-providers": "3.620.0",
     "@slack/web-api": "^7.5.0",
     "chalk": "^4.1.2",
     "cli-progress": "^3.12.0",
