--- a/package.json
+++ b/package.json
@@ -68,20 +68,20 @@
   "homepage": "https://github.com/codecollab-co/infra-cost#readme",
   "license": "MIT",
   "engines": {
-    "node": ">=16.0.0",
-    "npm": ">=7.0.0"
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
   },
   "dependencies": {
-    "@aws-sdk/client-budgets": "3.620.0",
-    "@aws-sdk/client-cost-explorer": "3.620.0",
-    "@aws-sdk/client-ec2": "3.620.0",
-    "@aws-sdk/client-elastic-load-balancing-v2": "3.620.0",
-    "@aws-sdk/client-iam": "3.620.0",
-    "@aws-sdk/client-lambda": "3.620.0",
-    "@aws-sdk/client-rds": "3.620.0",
-    "@aws-sdk/client-s3": "3.620.0",
-    "@aws-sdk/client-sts": "3.620.0",
-    "@aws-sdk/credential-providers": "3.620.0",
+    "@aws-sdk/client-budgets": "^3.750.0",
+    "@aws-sdk/client-cost-explorer": "^3.750.0",
+    "@aws-sdk/client-ec2": "^3.750.0",
+    "@aws-sdk/client-elastic-load-balancing-v2": "^3.750.0",
+    "@aws-sdk/client-iam": "^3.750.0",
+    "@aws-sdk/client-lambda": "^3.750.0",
+    "@aws-sdk/client-rds": "^3.750.0",
+    "@aws-sdk/client-s3": "^3.750.0",
+    "@aws-sdk/client-sts": "^3.750.0",
+    "@aws-sdk/credential-providers": "^3.750.0",
     "@slack/web-api": "^7.5.0",
     "chalk": "^4.1.2",
     "cli-progress": "^3.12.0",
