--- a/package.json
+++ b/package.json
@@ -68,24 +68,37 @@
   "homepage": "https://github.com/codecollab-co/infra-cost#readme",
   "license": "MIT",
   "engines": {
-    "node": ">=16.0.0",
-    "npm": ">=7.0.0"
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
   },
   "dependencies": {
-    "@aws-sdk/client-cost-explorer": "^3.621.0",
-    "@aws-sdk/client-iam": "^3.621.0",
-    "@aws-sdk/client-sts": "^3.621.0",
-    "@aws-sdk/credential-providers": "^3.621.0",
+    "@aws-sdk/client-budgets": "^3.750.0",
+    "@aws-sdk/client-cost-explorer": "^3.750.0",
+    "@aws-sdk/client-ec2": "^3.750.0",
+    "@aws-sdk/client-elastic-load-balancing-v2": "^3.750.0",
+    "@aws-sdk/client-iam": "^3.750.0",
+    "@aws-sdk/client-lambda": "^3.750.0",
+    "@aws-sdk/client-rds": "^3.750.0",
+    "@aws-sdk/client-s3": "^3.750.0",
+    "@aws-sdk/client-sts": "^3.750.0",
+    "@aws-sdk/credential-providers": "^3.750.0",
     "@slack/web-api": "^7.5.0",
     "chalk": "^4.1.2",
+    "cli-progress": "^3.12.0",
     "cli-table3": "^0.6.5",
     "commander": "^12.1.0",
-    "yauzl": "^3.0.0",
-    "pend": "^1.2.0",
+    "dayjs": "^1.11.19",
+    "exceljs": "^4.4.0",
+    "express": "^5.2.1",
     "fd-slicer": "^1.1.0",
+    "ini": "^6.0.0",
+    "moment": "^2.30.1",
+    "node-fetch": "^2.7.0",
+    "ora": "^9.1.0",
     "pako": "^2.1.0",
-    "zod": "^3.23.8",
-    "callsites": "^3.1.0"
+    "pend": "^1.2.0",
+    "yauzl": "^3.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
