chore: rename action to 'Infra Cost'

--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'Infra Cost - Multi-Cloud FinOps Analysis'
+name: 'Infra Cost'
 description: 'Comprehensive cost analysis and infrastructure optimization across AWS, GCP, Azure, Alibaba Cloud, and Oracle Cloud'
 author: 'Code Collab'
 
