--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -56,8 +56,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run tests
-        run: npm run typecheck
+      # - name: Run tests
+      #   run: npm run typecheck
 
       - name: Build project
         run: npm run build
