--- a/package.json
+++ b/package.json
@@ -72,17 +72,18 @@
     "npm": ">=10.0.0"
   },
   "dependencies": {
-    "@aws-sdk/client-budgets": "^3.750.0",
-    "@aws-sdk/client-cost-explorer": "^3.750.0",
-    "@aws-sdk/client-ec2": "^3.750.0",
-    "@aws-sdk/client-elastic-load-balancing-v2": "^3.750.0",
-    "@aws-sdk/client-iam": "^3.750.0",
-    "@aws-sdk/client-lambda": "^3.750.0",
-    "@aws-sdk/client-rds": "^3.750.0",
-    "@aws-sdk/client-s3": "^3.750.0",
-    "@aws-sdk/client-sts": "^3.750.0",
-    "@aws-sdk/credential-providers": "^3.750.0",
+    "@aws-sdk/client-budgets": "^3.975.0",
+    "@aws-sdk/client-cost-explorer": "^3.975.0",
+    "@aws-sdk/client-ec2": "^3.975.0",
+    "@aws-sdk/client-elastic-load-balancing-v2": "^3.975.0",
+    "@aws-sdk/client-iam": "^3.975.0",
+    "@aws-sdk/client-lambda": "^3.975.0",
+    "@aws-sdk/client-rds": "^3.975.0",
+    "@aws-sdk/client-s3": "^3.975.0",
+    "@aws-sdk/client-sts": "^3.975.0",
+    "@aws-sdk/credential-providers": "^3.975.0",
     "@slack/web-api": "^7.5.0",
+    "callsites": "^3.1.0",
     "chalk": "^4.1.2",
     "cli-progress": "^3.12.0",
     "cli-table3": "^0.6.5",
