--- a/package.json
+++ b/package.json
@@ -82,6 +82,10 @@
     "@aws-sdk/client-s3": "^3.975.0",
     "@aws-sdk/client-sts": "^3.975.0",
     "@aws-sdk/credential-providers": "^3.975.0",
+    "@google-cloud/billing": "^5.1.1",
+    "@google-cloud/compute": "^6.7.0",
+    "@google-cloud/monitoring": "^5.3.1",
+    "@google-cloud/resource-manager": "^6.2.1",
     "@slack/web-api": "^7.5.0",
     "callsites": "^3.1.0",
     "chalk": "^4.1.2",
