--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "@aws-sdk/client-s3": "^3.975.0",
     "@aws-sdk/client-sts": "^3.975.0",
     "@aws-sdk/credential-providers": "^3.975.0",
+    "@google-cloud/bigquery": "^8.1.1",
     "@google-cloud/billing": "^5.1.1",
     "@google-cloud/compute": "^6.7.0",
     "@google-cloud/monitoring": "^5.3.1",
@@ -96,6 +97,8 @@
     "exceljs": "^4.4.0",
     "express": "^5.2.1",
     "fd-slicer": "^1.1.0",
+    "google-auth-library": "^10.5.0",
+    "googleapis": "^171.0.0",
     "ini": "^6.0.0",
     "moment": "^2.30.1",
     "node-fetch": "^2.7.0",
