feat: Implement GCP resource inventory discovery (#77, #78)
Implement comprehensive resource discovery for GCP:

**Resource Types:**
- GCE Instances (Compute Engine VMs)
- Cloud Storage Buckets
- Cloud SQL Instances
- GKE Clusters (Kubernetes Engine)

**Features:**
- Parallel resource discovery across all zones/regions
- Filtering by region, tags, and resource state
- Automatic exclusion of terminated/failed resources
- Detailed resource metadata extraction
- Network interface and disk information for GCE
- Node pool details for GKE clusters
- Encryption and versioning info for Storage
- Backup configuration for Cloud SQL

**Implementation:**
- Created src/providers/gcp/inventory.ts with 4 discovery functions
- Updated GCPProvider.getResourceInventory() to use new module
- Added required SDK dependencies: @google-cloud/storage, @google-cloud/sql, @google-cloud/container
- Comprehensive error handling with troubleshooting steps
- Graceful zone-level error handling (continues on partial failures)

**Testing:**
- Created tests/unit/providers/gcp/inventory.test.ts
- 11 tests covering all resource types
- Tests for filtering, error handling, and state exclusion
- All tests passing

**Dependencies Added:**
- @google-cloud/storage
- @google-cloud/sql
- @google-cloud/container

Closes #77
Closes #78

--- a/package.json
+++ b/package.json
@@ -85,8 +85,11 @@
     "@google-cloud/bigquery": "^8.1.1",
     "@google-cloud/billing": "^5.1.1",
     "@google-cloud/compute": "^6.7.0",
+    "@google-cloud/container": "^6.6.0",
     "@google-cloud/monitoring": "^5.3.1",
     "@google-cloud/resource-manager": "^6.2.1",
+    "@google-cloud/sql": "^0.24.0",
+    "@google-cloud/storage": "^7.18.0",
     "@slack/web-api": "^7.5.0",
     "callsites": "^3.1.0",
     "chalk": "^4.1.2",
