feat: Implement Alibaba Cloud and Oracle Cloud providers with full GCP/Azure parity
Alibaba Cloud Provider (2,098 lines):
- config.ts - AccessKey/SecretKey authentication
- account.ts - Account management
- cost.ts - BSS OpenAPI integration
- inventory.ts - ECS, OSS, RDS, ACK discovery
- budget.ts - Budget tracking and alerts
- multi-account.ts - Multi-account aggregation
- provider.ts - Main provider class
- Comprehensive documentation (34 KB)

Oracle Cloud Infrastructure Provider (2,100+ lines):
- config.ts - API Key, Instance Principal, Resource Principal auth
- compartment.ts - Compartment/tenancy management
- cost.ts - Usage API integration
- inventory.ts - Compute, Block Volumes, Autonomous DB, OKE
- budget.ts - Budget tracking and alerts
- multi-compartment.ts - Multi-compartment aggregation
- provider.ts - Main provider class
- Complete documentation

Dependencies Added:
- @alicloud/* (6 packages for BSS, ECS, OSS, RDS, CS)
- oci-* (8 packages for compute, database, identity, etc.)

Features:
- Full CloudProviderAdapter implementation
- Multi-account/compartment support
- Parallel resource discovery
- Budget management with alerts
- Cost optimization recommendations
- Comprehensive error handling
- Production-ready code

tsup.config.ts updated with Azure, GCP, Alicloud, Oracle SDK externalization

--- a/package.json
+++ b/package.json
@@ -72,6 +72,12 @@
     "npm": ">=10.0.0"
   },
   "dependencies": {
+    "@alicloud/bssopenapi20171214": "^2.0.1",
+    "@alicloud/cs20151215": "^4.0.1",
+    "@alicloud/ecs20140526": "^4.0.3",
+    "@alicloud/oss20190517": "^2.0.2",
+    "@alicloud/rds20140815": "^3.0.2",
+    "@alicloud/tea-util": "^1.4.7",
     "@aws-sdk/client-budgets": "^3.975.0",
     "@aws-sdk/client-cost-explorer": "^3.975.0",
     "@aws-sdk/client-ec2": "^3.975.0",
@@ -114,6 +120,14 @@
     "ini": "^6.0.0",
     "moment": "^2.30.1",
     "node-fetch": "^2.7.0",
+    "oci-budget": "^2.88.0",
+    "oci-common": "^2.88.0",
+    "oci-containerengine": "^2.88.0",
+    "oci-core": "^2.88.0",
+    "oci-database": "^2.88.0",
+    "oci-identity": "^2.88.0",
+    "oci-objectstorage": "^2.88.0",
+    "oci-usageapi": "^2.88.0",
     "ora": "^9.1.0",
     "pako": "^2.1.0",
     "pend": "^1.2.0",
