--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "@alicloud/bssopenapi20171214": "^2.0.1",
     "@alicloud/cs20151215": "^4.0.1",
     "@alicloud/ecs20140526": "^4.0.3",
-    "@alicloud/oss20190517": "^2.0.2",
+    "@alicloud/oss20190517": "^1.0.6",
     "@alicloud/rds20140815": "^3.0.2",
     "@alicloud/tea-util": "^1.4.7",
     "@aws-sdk/client-budgets": "^3.975.0",
@@ -88,15 +88,15 @@
     "@aws-sdk/client-s3": "^3.975.0",
     "@aws-sdk/client-sts": "^3.975.0",
     "@aws-sdk/credential-providers": "^3.975.0",
-    "@azure/arm-compute": "^22.1.0",
-    "@azure/arm-consumption": "^11.0.0",
-    "@azure/arm-containerservice": "^22.0.0",
-    "@azure/arm-costmanagement": "^1.1.0",
-    "@azure/arm-network": "^34.1.0",
-    "@azure/arm-sql": "^11.1.0",
-    "@azure/arm-storage": "^18.2.0",
-    "@azure/arm-subscriptions": "^6.1.0",
-    "@azure/identity": "^4.7.0",
+    "@azure/arm-compute": "^23.3.0",
+    "@azure/arm-consumption": "^9.2.1",
+    "@azure/arm-containerservice": "^24.1.0",
+    "@azure/arm-costmanagement": "^1.0.0-beta.2",
+    "@azure/arm-network": "^35.0.0",
+    "@azure/arm-sql": "^10.0.0",
+    "@azure/arm-storage": "^19.1.0",
+    "@azure/arm-subscriptions": "^6.0.0",
+    "@azure/identity": "^4.13.0",
     "@google-cloud/bigquery": "^8.1.1",
     "@google-cloud/billing": "^5.1.1",
     "@google-cloud/compute": "^6.7.0",
