--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "google-auth-library": "^10.5.0",
     "googleapis": "^171.0.0",
     "ini": "^6.0.0",
+    "ink": "^6.6.0",
     "moment": "^2.30.1",
     "node-fetch": "^2.7.0",
     "oci-budget": "^2.88.0",
@@ -131,6 +132,7 @@
     "ora": "^9.1.0",
     "pako": "^2.1.0",
     "pend": "^1.2.0",
+    "react": "^19.2.4",
     "yauzl": "^3.0.0",
     "zod": "^3.23.8"
   },
