--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es2020",
     "lib": ["esnext"],
+    "jsx": "react",
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
@@ -16,5 +17,5 @@
     "noEmit": true
   },
   "exclude": ["node_modules", "dist"],
-  "include": ["**/*.ts"]
+  "include": ["**/*.ts", "**/*.tsx"]
 }
