--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "infra-cost",
-  "version": "1.6.0",
+  "version": "1.7.0",
   "description": "Multi-cloud FinOps CLI tool for comprehensive cost analysis and infrastructure optimization across AWS, GCP, Azure, Alibaba Cloud, and Oracle Cloud",
   "keywords": [
     "aws",
@@ -111,12 +111,15 @@
     "cli-progress": "^3.12.0",
     "cli-table3": "^0.6.5",
     "commander": "^12.1.0",
+    "cors": "^2.8.6",
     "dayjs": "^1.11.19",
     "exceljs": "^4.4.0",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
     "fd-slicer": "^1.1.0",
     "google-auth-library": "^10.5.0",
     "googleapis": "^171.0.0",
+    "helmet": "^8.1.0",
     "ini": "^6.0.0",
     "ink": "^6.6.0",
     "moment": "^2.30.1",
@@ -133,10 +136,14 @@
     "pako": "^2.1.0",
     "pend": "^1.2.0",
     "react": "^19.2.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "yauzl": "^3.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.5.4",
     "@types/yauzl": "^2.10.3",
